# inhibitory-normalization

./: .gitignore  LICENSE  README.md  activate_env.sh  create_venv.sh  load_venv.sh  make_venv.sh  pyproject.toml  requirements.txt  setup.py
danns_eg/: conv.py  dense.py  drnn.py  edensenet.py  eidensenet.py  homeostatic_mu_var_densenet.py  homeostaticdense.py  homeostaticdensenet.py  loss.py  predictivernn.py  resnets.py  rnn.py  train.py  utils.py
danns_eg/data/: cifar.py  dataloaders.py  mnist.py
experiments/dense_mnist/figures/: fig3.ipynb  fig4.ipynb
experiments/dense_mnist/src/: train_homeostatic_network.py
experiments/perceptual_invariant_fashionmnist/: README.md
inhib_norm/: conv.py  dense.py  edensenet.py  eidensenet.py  homeostatic_mu_var_densenet.py  homeostaticdense.py  homeostaticdensenet.py  normalization.py  optimisation.py  sequential.py  utils.py
inhib_norm/data/: dataloaders.py  mnist.py
models/dense_mnist_task/: README.md
tests/: EIDenseLayerDecoupledHomeostasis_test.py  EiDenseLayerMeanHomeostatic_test.py  divisivenormalize_test.py  edense_test.py  edensenet_test.py  eidense_test.py  eidensenet_test.py  homeostasticdensenet_test.py  homeostasticmuvardensenet_test.py  layernormalize_test.py  meannormalize_test.py
unit_test/: EIDenseLayerDecoupledHomeostasis_test.py  EiDenseLayerMeanHomeostatic_test.py  divisivenormalize_test.py  edense_test.py  edensenet_test.py  eidense_test.py  eidensenet_test.py  homeostasticdensenet_test.py  homeostasticmuvardensenet_test.py  layernormalize_test.py  meannormalize_test.py
(+36 files in other folders)
