[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inhib_norm"
version = "0.1.0"
description = "Inhibitory normalization of error signals improves learning in neural circuits"
authors = [{name = "Roy Henha Eyono"}]
license = {text = "MIT"}
requires-python = ">=3.9.15"

[tool.setuptools.packages.find]
include = ["inhib_norm*"]
